# numutils

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  _mat_plot_lib_8hpp_source.html  _numerical_utils_8hpp_source.html  _precision_traits_8hpp_source.html  _range_8hpp_source.html  _surface_8hpp_source.html  annotated.html  classes.html  classnya_1_1_range-members.html  classnya_1_1_range.html  classnya_1_1_range_iterator-members.html  classnya_1_1_range_iterator.html  classnya_1_1_surface-members.html  classnya_1_1_surface.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespacenya.html  namespaces.html  structnya_1_1_c_f_d2.html  structnya_1_1_c_f_d4.html  structnya_1_1_euler-members.html  structnya_1_1_euler.html  structnya_1_1_integral_pow-members.html  structnya_1_1_integral_pow.html  structnya_1_1_integral_pow_3_01value_00_010_01_4-members.html  structnya_1_1_integral_pow_3_01value_00_010_01_4.html  structnya_1_1_l_f_d1-members.html  structnya_1_1_l_f_d1.html  structnya_1_1_l_f_d2-members.html  structnya_1_1_l_f_d2.html  (+12 more)
cmake/: CodeCoverage.cmake  FindNumPy.cmake
docs/: Doxyfile
examples/: Galerkin.cpp  Minimal.cpp
include/: MatPlotLib.hpp  NumericalUtils.hpp  PrecisionTraits.hpp  Range.hpp  Surface.hpp
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  search.js  variables_0.js
src/: main.cpp
test/: NumUtilsTest.cpp  RangeTest.cpp  TestUtils.hpp
